refactor MockGeoPropertiesService and PropertiesGeoSearchController for enhanced property search capabilities and improved code clarity